--- a/src/components/App.less
+++ b/src/components/App.less
@@ -5,14 +5,14 @@
 }
 
 .title {
-  height: 7vh;
-  width: 100vw;
+  height: 8vh;
+  width: 100%;
   margin-bottom: 3vh;
-  min-height: 2.5rem;
+  padding: 0 0.5rem;
   background: #108ee9;
   color: #fff;
   display: flex;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   justify-content: center;
   align-items: center;
 }
