--- a/src/components/List/ListItem.less
+++ b/src/components/List/ListItem.less
@@ -1,8 +1,27 @@
 .root {
   display: flex;
   align-items: center;
+  padding: 0.5rem 0;
+  font-size: 1rem;
+}
+
+.greyBackground {
+  background: #d3d3d3;
 }
 
 .time {
-  width: 8rem;
+  min-width: 6rem;
+  padding: 0 1rem;
+  display: flex;
+  justify-content: center;
+}
+
+.info {
+  .missed {
+    color: #f00000;
+  }
+
+  .wait {
+    color: #3333ff;
+  }
 }
